--- a/blog.html
+++ b/blog.html
@@ -143,7 +143,7 @@
             <div class="row g-4">
 
                 <!-- 1. üçlü sıra START -->
-                <div class="col-xl-4 col-md-6">
+                <div page="1" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div page="1" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-2.png">
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div page="1" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-3.png">
@@ -197,7 +197,7 @@
                 <!-- 1. üçlü sıra END -->
 
                 <!-- 2. üçlü sıra START -->
-                <div class="col-xl-4 col-md-6">
+                <div page="2" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
@@ -214,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div page="2" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-2.png">
@@ -231,7 +231,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div page="2" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-3.png">
@@ -251,7 +251,7 @@
                 <!-- 2. üçlü sıra END -->
 
                 <!-- 3. üçlü sıra START -->
-                <div class="col-xl-4 col-md-6">
+                <div page="3" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
@@ -268,7 +268,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div page="3" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-2.png">
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div page="3" class="col-xl-4 col-md-6">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-3.png">
