--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -43,9 +43,9 @@
                         <li><a href="index.html">ANASAYFA</a></li>
                         <li><a class="active" href="hakkimizda.html">hakkımızda</a></li>
                         <li class="dropdown">
-                            <a href="JavaScript:Void(0)">Hizmetler</a>
+                            <a href="JavaScript:Void(0)">HİZMETLER</a>
                             <ul class="dropdown-content">
-                                <li><a href="hizmetler.html">Hizmetler</a></li>
+                                <li><a href="hizmetler.html">HİZMETLER</a></li>
                                 <li><a href="hizmet-detaylar/web-tasarim.html">Web Tasarım</a></li>
                                 <li><a href="hizmet-detaylar/web-yazilim.html">Web Yazılım</a></li>
                                 <li><a href="hizmet-detaylar/kurumsal-seo.html">Kurumsal SEO</a></li>
