--- a/hizmet-detaylar/kurumsal-seo.html
+++ b/hizmet-detaylar/kurumsal-seo.html
@@ -43,9 +43,9 @@
                         <li><a href="../index.html">ANASAYFA</a></li>
                         <li><a href="../hakkimizda.html">hakkımızda</a></li>
                         <li class="dropdown">
-                            <a class="active" href="../JavaScript:Void(0)">Hizmetler</a>
+                            <a class="active" href="../JavaScript:Void(0)">HİZMETLER</a>
                             <ul class="dropdown-content">
-                                <li><a href="../hizmetler.html">Hizmetler</a></li>
+                                <li><a href="../hizmetler.html">HİZMETLER</a></li>
                                 <li><a href="web-tasarim.html">Web Tasarım</a></li>
                                 <li><a href="web-yazilim.htm">Web Yazılım</a></li>
                                 <li><a href="kurumsal-seo.html">Kurumsal SEO</a></li>
