--- a/kopyalanacak.html
+++ b/kopyalanacak.html
@@ -45,7 +45,7 @@
           <li class="dropdown">
             <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
             <ul class="dropdown-content">
-              <li><a href="hizmetler.html">Hizmetler</a></li>
+              <li><a href="hizmetler.html">HİZMETLER</a></li>
               <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
               <li><a href="referanslar.html">Referanslar</a></li>
               <li><a href="referans-detay.html">Referenslar Detay</a></li>
