--- a/raf.html
+++ b/raf.html
@@ -11,7 +11,7 @@
           <li><a class="active" href="">anasayfa</a></li>
           <li><a href="">hakkımızda</a></li>
           <li class="dropdown">
-            <a href="JavaScript:Void(0)">Hizmetlerimiz</a>
+            <a href="JavaScript:Void(0)">HİZMETLERimiz</a>
             <ul class="dropdown-content">
               <li><a href="">Web Tasarım</a></li>
               <li><a href="">Web Yazılım</a></li>
@@ -56,7 +56,7 @@
           <li class="dropdown">
             <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
             <ul class="dropdown-content">
-              <li><a href="hizmetler.html">Hizmetler</a></li>
+              <li><a href="hizmetler.html">HİZMETLER</a></li>
               <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
               <li><a href="referanslar.html">Referanslar</a></li>
               <li><a href="referans-detay.html">Referenslar Detay</a></li>
